# bit-math

./: .appveyor.yml  .gitignore  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  README.md  conanfile.py  version.hpp.in
CMake/Modules/: EnableCCache.cmake
CMake/Templates/: config.hpp.in  version.hpp.in
doc/: CMakeLists.txt  Doxyfile
docs/: CMakeLists.txt  Doxyfile.in
include/bit/math/: angles.hpp  clamped.hpp  euler.hpp  half.hpp  interpolation.hpp  math.hpp  matrix.hpp  point.hpp  quaternion.hpp  simplex.hpp  transform.hpp  vector.hpp
include/bit/math/detail/: angles.inl  clamped.inl  euler.inl  interpolation.inl  math.inl  matrix.inl  quaternion.inl  transform.inl  vector.inl
include/bit/math/detail/angles/: degree.hpp  degree.inl  gradian.hpp  gradian.inl  radian.hpp  radian.inl
include/bit/math/detail/geometry/: point.hpp
include/bit/math/detail/geometry/point/: point2.inl  point3.hpp
include/bit/math/detail/matrix/: matrix2.hpp  matrix2.inl  matrix3.hpp  matrix3.inl  matrix4.hpp  matrix4.inl  matrix_proxy.hpp  matrix_proxy.inl
include/bit/math/detail/point/: point2.hpp  point2.inl  point3.hpp  point3.inl
include/bit/math/detail/vector/: vector2.hpp  vector2.inl  vector3.hpp  vector3.inl  vector4.hpp  vector4.inl
src/bit/math/: angles.cpp  euler.cpp  half.cpp  matrix.cpp  quaternion.cpp  simplex.cpp  vector.cpp
test/: CMakeLists.txt  main.test.cpp
test/bit/math/: clamped.test.cpp  matrix2.test.cpp  quaternion.test.cpp  vector2.test.cpp
test_package/: CMakeLists.txt  conanfile.py
test_package/src/: main.cpp
